Find Bugs issues:
- fixed possible NPE's by changing null check predicates to && instead of ||
- switched to valueOf from explicit Number construction.