@@ -141,14 +141,14 @@ public class JSFUtils12 extends JSFUtils{
 			servlet = WebFactory.eINSTANCE.createServlet();
 			servlet.setServletName(displayName);
 			servlet.setServletClass(className);
-			servlet.setLoadOnStartup(new Integer(1));
+			servlet.setLoadOnStartup(Integer.valueOf(1));
 			// Add the servlet to the web application model
 			webApp.getServlets().add(servlet);
 
 		} else {
 			// update
 			servlet.setServletName(displayName);
-			servlet.setLoadOnStartup(new Integer(1));
+			servlet.setLoadOnStartup(Integer.valueOf(1));
 		}
 		return servlet;
 	}
@@ -266,7 +266,7 @@ public class JSFUtils12 extends JSFUtils{
 				if (cp.getParamValue().indexOf(config.getStringProperty(IJSFFacetInstallDataModelProperties.CONFIG_PATH)) < 0) {
 					String curVal = cp.getParamValue();
 					String val = config.getStringProperty(IJSFFacetInstallDataModelProperties.CONFIG_PATH);
-					if (curVal != null || !curVal.trim().equals("")) { //$NON-NLS-1$
+					if (curVal != null && !"".equals(curVal.trim())) { //$NON-NLS-1$
 						val = curVal + ",\n" + val; //$NON-NLS-1$
 					}
 					cp.setParamValue(val);
